metadata/force-app/main/default/objects/Account/fields/Custom_Field_128__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_128__c</fullName>
    <description>test</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>Custom Field 128</label>
    <length>255</length>
    <type>Text</type>
</CustomField>