metadata/force-app/main/default/objects/Account/fields/PM_1508__c.field-meta.xml
<CustomField>
    <fullName>PM_1508__c</fullName>
    <label>PM-1508</label>
    <length>200</length>
    <type>Text</type>
</CustomField>