metadata/force-app/main/default/objects/Account/validationRules/PhoneNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNumber</fullName>
    <active>false</active>
    <errorConditionFormula>Phone  = &apos;123&apos;</errorConditionFormula>
    <errorMessage>Phone Number is 123</errorMessage>
</ValidationRule>