metadata/force-app/main/default/objects/Account/validationRules/Validate_Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Test</fullName>
    <active>false</active>
    <errorConditionFormula>Name = &apos;New1&apos;</errorConditionFormula>
    <errorMessage>error</errorMessage>
</ValidationRule>