metadata/force-app/main/default/objects/Account/validationRules/VR1.validationRule-meta.xml
<ValidationRule>
    <fullName>VR1</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;111&apos;</errorConditionFormula>
    <errorMessage>Error!</errorMessage>
</ValidationRule>