metadata/force-app/main/default/objects/Account/validationRules/VR10.validationRule-meta.xml
<ValidationRule>
    <fullName>VR10</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;1010&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>