metadata/force-app/main/default/objects/Account/validationRules/VR11.validationRule-meta.xml
<ValidationRule>
    <fullName>VR11</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;1011&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>