metadata/force-app/main/default/objects/Account/validationRules/VR12.validationRule-meta.xml
<ValidationRule>
    <fullName>VR12</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;1212&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>