metadata/force-app/main/default/objects/Account/validationRules/VR13.validationRule-meta.xml
<ValidationRule>
    <fullName>VR13</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;1313&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>