metadata/force-app/main/default/objects/Account/validationRules/VR14.validationRule-meta.xml
<ValidationRule>
    <fullName>VR14</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;1414&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>