metadata/force-app/main/default/objects/Account/validationRules/VR15.validationRule-meta.xml
<ValidationRule>
    <fullName>VR15</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;1515&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>