metadata/force-app/main/default/objects/Account/validationRules/VR16.validationRule-meta.xml
<ValidationRule>
    <fullName>VR16</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;1616&apos;</errorConditionFormula>
    <errorMessage>Error!</errorMessage>
</ValidationRule>