metadata/force-app/main/default/objects/Account/validationRules/VR17.validationRule-meta.xml
<ValidationRule>
    <fullName>VR17</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;1717&apos;</errorConditionFormula>
    <errorMessage>Errror</errorMessage>
</ValidationRule>