metadata/force-app/main/default/objects/Account/validationRules/VR18.validationRule-meta.xml
<ValidationRule>
    <fullName>VR18</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;1818&apos;</errorConditionFormula>
    <errorMessage>Error!</errorMessage>
</ValidationRule>