metadata/force-app/main/default/objects/Account/validationRules/VR19.validationRule-meta.xml
<ValidationRule>
    <fullName>VR19</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;1919&apos;</errorConditionFormula>
    <errorMessage>Error!</errorMessage>
</ValidationRule>