metadata/force-app/main/default/objects/Account/validationRules/VR2.validationRule-meta.xml
<ValidationRule>
    <fullName>VR2</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;222&apos;</errorConditionFormula>
    <errorMessage>Error!</errorMessage>
</ValidationRule>