metadata/force-app/main/default/objects/Account/validationRules/VR20.validationRule-meta.xml
<ValidationRule>
    <fullName>VR20</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;2020&apos;</errorConditionFormula>
    <errorMessage>Error!</errorMessage>
</ValidationRule>