metadata/force-app/main/default/objects/Account/validationRules/VR21.validationRule-meta.xml
<ValidationRule>
    <fullName>VR21</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;2121&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>