metadata/force-app/main/default/objects/Account/validationRules/VR22.validationRule-meta.xml
<ValidationRule>
    <fullName>VR22</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;2222&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>