metadata/force-app/main/default/objects/Account/validationRules/VR23.validationRule-meta.xml
<ValidationRule>
    <fullName>VR23</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;2323&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>