metadata/force-app/main/default/objects/Account/validationRules/VR24.validationRule-meta.xml
<ValidationRule>
    <fullName>VR24</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;2424&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>