metadata/force-app/main/default/objects/Account/validationRules/VR25.validationRule-meta.xml
<ValidationRule>
    <fullName>VR25</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;2525&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>