metadata/force-app/main/default/objects/Account/validationRules/VR3.validationRule-meta.xml
<ValidationRule>
    <fullName>VR3</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;333&apos;</errorConditionFormula>
    <errorMessage>Error!</errorMessage>
</ValidationRule>