metadata/force-app/main/default/objects/Account/validationRules/VR4.validationRule-meta.xml
<ValidationRule>
    <fullName>VR4</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;444&apos;</errorConditionFormula>
    <errorMessage>Errror</errorMessage>
</ValidationRule>