metadata/force-app/main/default/objects/Account/validationRules/VR5.validationRule-meta.xml
<ValidationRule>
    <fullName>VR5</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;555&apos;</errorConditionFormula>
    <errorMessage>Error!</errorMessage>
</ValidationRule>