metadata/force-app/main/default/objects/Account/validationRules/VR6.validationRule-meta.xml
<ValidationRule>
    <fullName>VR6</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;666&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>