metadata/force-app/main/default/objects/Account/validationRules/VR7.validationRule-meta.xml
<ValidationRule>
    <fullName>VR7</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;777&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>