metadata/force-app/main/default/objects/Account/validationRules/VR8.validationRule-meta.xml
<ValidationRule>
    <fullName>VR8</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;888&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>