metadata/force-app/main/default/objects/Account/validationRules/VR9.validationRule-meta.xml
<ValidationRule>
    <fullName>VR9</fullName>
    <active>true</active>
    <errorConditionFormula>AccountNumber = &apos;999&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>